...
    val showDeleteConfirmationDialog = remember { mutableStateOf(false) }

    // Delete confirmation dialog
    if (showDeleteConfirmationDialog.value) {
        AlertDialog(
            onDismissRequest = { showDeleteConfirmationDialog.value = false },
            title = { Text(text = "Confirm Delete") },
            text = { Text("Are you sure you want to delete this task?") },
            confirmButton = {
                Button(onClick = {
                    coroutineScope.launch {
                        taskViewModel.deleteTask(task)
                    }
                    showDeleteConfirmationDialog.value = false
                }) {
                    Text("Yes")
                }
            },
            dismissButton = {
                Button(onClick = { showDeleteConfirmationDialog.value = false }) {
                    Text("No")
                }
...
                        }
                    },
                    enabled = !isDone.value
                ) {
                    Icon(
                        imageVector = Icons.Filled.Star,
                        contentDescription = "Star Task",
                        tint = if (isStarred.value) Color.Yellow.copy(alpha = 0.8f) else textColor
                    )
                }
                // Checkbox to toggle the task's done status
                Checkbox(
                    checked = isDone.value,
...
                IconButton(
                    onClick = { if (!isDone.value) showDialog.value = true },
                    enabled = !isDone.value
                ) {
                    Icon(
                        imageVector = Icons.Filled.Edit,
                        contentDescription = "Edit Task",
                        tint = if (isDone.value) Color.Gray else LocalContentColor.current
                    )
                }
                IconButton(
                    onClick = {
                        if (isDone.value) {
...
                            showDeleteConfirmationDialog.value = true
                        }
                    }
                ) {
                    Icon(
                        imageVector = Icons.Filled.Delete,
                        contentDescription = "Delete Task",
                        tint = LocalContentColor.current
                    )
                }
                IconButton(
                    onClick = { showDetailsDialog.value = task }
                ) {
                    Icon(
                        imageVector = Icons.Filled.MoreVert,
                        contentDescription = "Task Details",
                    )
                }
            }
        }

        // Show edit dialog if needed
...
